@@ -121,4 +121,6 @@ buildroot-1.11 2011-xx-xx <gnutt@nuttx.org>
 	* Added an ARM EABI GCC 4.6.3 configuration (tool name is arm-nuttx-eabi-).
 	* ldnxflat: Add support for the R_ARM_REL32 relocation.  This relocation
 	  type was not generated by GCC/LD prior to gcc-4.6.3
+	* R_ARM_REL32 logic is conditionally disabled because it has not been
+	  tested.
 
